fix mobile spacing issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -26,9 +26,9 @@
     border-radius: 30px;
   }
 }
-:where(body .is-layout-flow) > :first-child .fo-accordion:first-child {
-  margin-top: 0!important;
-}
+// :where(body .is-layout-flow) > :first-child .fo-accordion:first-child {
+//   margin-top: 0!important;
+// }
 .fo-accordion summary {
   padding: 1.5em 4em 1.5em 1.5em;
   background-color: #FFF;
